--- a/styles.css
+++ b/styles.css
@@ -1,76 +1,83 @@
 #wrapper {
-    max-width: 1000px;
-    margin: 20px auto;
-    position: relative;
+  max-width: 1000px;
+  margin: 20px auto;
+  position: relative;
 }
 #media {
-    width: 100%;
+  width: 100%;
 }
 #controls {
-    background-color: #fffc;
-    border-radius: 10px;
-    padding: 10px 5px;
-    border: 1px solid #ddd;
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    right: 10px;
-    user-select: none;
+  background-color: #fffc;
+  border-radius: 10px;
+  padding: 10px 5px;
+  border: 1px solid #ddd;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  right: 10px;
+  user-select: none;
 }
 #top-row {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 .button {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    border: none;
-    width: 30px;
-    min-width: 30px;
-    height: 30px;
-    cursor: pointer;
-    background-color: #eee;
-    margin: 0 5px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: none;
+  width: 30px;
+  min-width: 30px;
+  height: 30px;
+  cursor: pointer;
+  background-color: #eee;
+  margin: 0 5px;
 }
 .button:hover {
-    background-color: #ccc;
+  background-color: #ccc;
 }
 
 .buttonActive {
-    background-color: #ce1f99;
+  background-color: #ce1f99;
 }
 
 .button img {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 }
 #progress-section {
-    display: flex;
-    margin: 0 5px;
-    align-items: center;
-    font-size: 14px;
-    font-family: monospace;
-    margin-top: 10px;
+  display: flex;
+  margin: 0 5px;
+  align-items: center;
+  font-size: 14px;
+  font-family: monospace;
+  margin-top: 10px;
+  position: relative;
 }
 #progress-bar {
-    flex-grow: 1;
-    margin-right: 10px;
-    accent-color: #ce1f99;
-    height: 14px;
+  flex-grow: 1;
+  margin-right: 10px;
+  accent-color: #ce1f99;
+  height: 14px;
 }
 #volume-bar {
-    margin: 0 5px;
-    min-width: 70px;
-    max-width: 110px;
-    height: 14px;
-    accent-color: #ce1f99;
+  margin: 0 5px;
+  min-width: 70px;
+  max-width: 110px;
+  height: 14px;
+  accent-color: #ce1f99;
 }
 #speed-bar {
-    margin-right: auto;
-    min-width: 70px;
-    max-width: 110px;
-    height: 14px;
-    accent-color: #ce1f99;
+  margin-right: auto;
+  min-width: 70px;
+  max-width: 110px;
+  height: 14px;
+  accent-color: #ce1f99;
+}
+
+#previewImage {
+  position: absolute;
+  bottom: 20px;
+  display: none;
 }
